Backwards compatibility breaks in 2.1.0:

- All callbacks now recieve the DOM-Node of the editor set as their this context